--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     ],
     "require":{
         "php":">=8",
-        "filp/whoops":"~2"
+        "filp/whoops":"~2",
+        "monolog/monolog": "^3.3"
     },
     "autoload":{
         "psr-4": {
