Pruebo nueva config

--- a/conf/nginx/ngxin-site.conf
+++ b/conf/nginx/ngxin-site.conf
@@ -6,7 +6,7 @@ server {
   server_name _;
 
   root /var/www/html/public;
-  index index.html index.htm index.php;
+  index index.php;
 
   # Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
   sendfile off;
@@ -27,9 +27,9 @@ server {
 
   charset utf-8;
 
-  location / {
-      try_files $uri $uri/ /index.php/$uri?$query_string;
-  }
+#  location / {
+#      try_files $uri $uri/ /index.php/$uri?$query_string;
+#  }
 
   location = /favicon.ico { access_log off; log_not_found off; }
   location = /robots.txt  { access_log off; log_not_found off; }
