--- a/conf/nginx/ngxin-site.conf
+++ b/conf/nginx/ngxin-site.conf
@@ -27,9 +27,21 @@ server {
 
   charset utf-8;
 
-#  location / {
-#      try_files $uri $uri/ /index.php/$uri?$query_string;
-#  }
+  location / {
+    # Size zero static files are served.
+    # I don't believe that is an issue.
+    try_files $uri /index.php$request_uri;
+  }
+
+  # If no other .php files are accessible a prefix location of '/index.php/'
+  # is safer.
+  location /index.php/ {
+    include snippets/fastcgi-php.conf;
+    fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
+    # Probably duplicates the contents of fastcgi-php.conf
+    # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    # include fastcgi_params;
+  }
 
   location = /favicon.ico { access_log off; log_not_found off; }
   location = /robots.txt  { access_log off; log_not_found off; }
