--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require":{
         "php":">=8",
         "filp/whoops":"~2",
-        "monolog/monolog": "^3.3"
+        "monolog/monolog": "^3.3",
+        "vlucas/phpdotenv": "^5.5"
     },
     "autoload":{
         "psr-4": {
