Resuelvo conflictos en composer.json

--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         }
     ],
     "require":{
-        "php":">=8",
+        "php":">=7.4",
         "filp/whoops":"~2",
-        "monolog/monolog": "^3.3",
+        "monolog/monolog": "^2.5"
         "vlucas/phpdotenv": "^5.5"
     },
     "autoload":{
