--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require":{
         "php":">=7.4",
         "filp/whoops":"~2",
-        "monolog/monolog": "^2.5"
+        "monolog/monolog": "^2.5",
         "vlucas/phpdotenv": "^5.5"
     },
     "autoload":{
